clusters/dev/policies/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devsecops-api-allow-same-namespace
  namespace: devsecops-api
  labels:
    app.kubernetes.io/name: devsecops-api
    app.kubernetes.io/managed-by: flux
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: devsecops-api
      app.kubernetes.io/instance: devsecops-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8000
